@@ -1,5 +1,8 @@
-2012-12-01  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2013-01-09  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
+	* pydb.py: Pdb stops now at the next statement in the main module when
+	the 'next' command has been issued. Pdb prints now a message to the
+	console when the script has terminated.
 	* gdb.py: Add file completion on 'shell' first argument.
 	* gdb.py: Fix gdb version detection.
 	* vim.py: Fix mapkeys lost in a new gdb session.
